Fixed Issues with border on safari

--- a/portfolio.css
+++ b/portfolio.css
@@ -71,7 +71,7 @@
 }
 
 .projectVideo {
-    outline: 5px solid black;
+    border: 5px solid black;
     border-radius: 30px;
     max-width: 50%;
     max-height: 50%;
@@ -82,7 +82,7 @@
 }
 
 .projectImage {
-    outline: 5px solid black;
+    border: 5px solid black;
     border-radius: 30px;
     max-width: 100%;
     max-height: 100%;
